# YOLOPv2-ncnn-on-Jetson-Orin

./: CMakeLists.txt  README.md
src/: yolopv2.cpp
